# pantha-rei

./: .gitignore
mongo-docker/: docker-compose.yml
pr-be/: Cargo.toml  test.http
pr-be/src/: dbutils.rs  error.rs  event.rs  main.rs  refdata.rs  user.rs  utils.rs
pr-fe/: index.html  package-lock.json  package.json
pr-fe/src/: App.svelte
pr-fe/src/lib/Event/: Event.svelte  EventRequirement.svelte  Events.svelte  NewEvent.svelte
pr-fe/src/lib/GeneralComponents/: DispositionSelector.svelte  PrSelect.svelte  PrivateRoute.svelte  PrivateRouteGuard.svelte
pr-fe/src/lib/Home/: Home.svelte
pr-fe/src/lib/Login/: Login.svelte
pr-fe/src/lib/Logout/: Logout.svelte
pr-fe/src/lib/User/: NewUser.svelte  User.svelte  Users.svelte
pr-fe/src/types/: prtypes.type.ts
pr-fe/src/utils/: auth.ts  services.ts  services.tsx  stores.ts
